--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "marked": "^3.0.4",
-    "node-sass": "5.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
@@ -44,6 +43,8 @@
     ]
   },
   "devDependencies": {
-    "@types/marked": "^3.0.1"
+    "@types/marked": "^3.0.1",
+    "@types/node-sass": "^4.11.2",
+    "node-sass": "^5.0.0"
   }
 }
